--- a/packages/selianize/package.json
+++ b/packages/selianize/package.json
@@ -1,7 +1,7 @@
 {
   "name": "selianize",
   "version": "3.17.0",
-  "description": "Export Selenium IDE projects into javascript",
+  "description": "Export Auton8 projects into javascript",
   "repository": "https://github.com/SeleniumHQ/selenium-ide",
   "main": "dist/selianize.cjs.js",
   "module": "dist/selianize.esm.js",
