--- a/packages/side-utils/package.json
+++ b/packages/side-utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@seleniumhq/side-utils",
   "version": "3.17.0",
-  "description": "Utils for Selenium IDE (e.g., code export)",
+  "description": "Utils for Auton8 (e.g., code export)",
   "repository": "https://github.com/SeleniumHQ/selenium-ide",
   "keywords": [
     "selenium",
