--- a/packages/selenium-ide/src/manifest.json
+++ b/packages/selenium-ide/src/manifest.json
@@ -32,9 +32,7 @@
     "<all_urls>"
   ],
   "externally_connectable": {
-    "ids": [
-      "*"
-    ]
+    "ids": ["*"]
   },
   "web_accessible_resources": [
     "icons/icon128.png",
@@ -48,9 +46,7 @@
   "content_security_policy": "script-src 'self' 'sha256-W7QWmGne6B9hjKtOqoGmUFOPgpFcUo4Nr/yyMqtgXcU=' 'sha256-g0sGx5oQNWQA7+VAX6oocWOlrBzbLK0jggpU/mFFNHE=' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
+      "matches": ["<all_urls>"],
       "js": [
         "assets/vendor/global.js",
         "assets/vendor/selenium-browserdetect.js",
@@ -65,8 +61,6 @@
     }
   ],
   "background": {
-    "scripts": [
-      "assets/background.js"
-    ]
+    "scripts": ["assets/background.js"]
   }
 }
